--- a/trunk/assets/css/wall.css
+++ b/trunk/assets/css/wall.css
@@ -781,6 +781,67 @@ a:hover {
     padding: 5px 0px 5px 0px;
 }
 
+/*-----------------------------------------wall about part------------------------------------*/
+#aboutContainer{
+    background: #fff;
+    color: #141823;
+    line-height: 1.28;
+    padding: 0;
+    width: 69%;
+    margin: 26px 210px;
+}
+#aboutLeft{
+    float: left;
+   width: 25%;
+    display: block;
+    overflow: hidden;
+    position: relative;
+    padding-bottom: 8px;
+    padding-top: 8px;
+    background: #fff;
+}
+#aboutLeft ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+#aboutLeft ul li{
+    display: list-item;
+    text-align: -webkit-match-parent;
+    list-style-type: none;
+    word-wrap: break-word;
+    font-family: Helvetica, Arial, 'lucida grande',tahoma,verdana,arial,sans-serif;
+}
+#aboutLeft ul li a{
+    text-decoration: none;
+    display: block;
+padding: 12px 4px 12px 16px;
+color: #3b5998;
+cursor: pointer;
+}
+#aboutLeft ul li a span{
+    color: #9197a3;
+    font-size: 14px;
+line-height: 18px;
+cursor: pointer;
+}
+#aboutRight{
+    float: right;
+    min-height: 1px;
+    display: block;
+    list-style-type: none;
+    background: #fff;
+    width: 75%;
+}
+.aboutContent{
+    border-left: 1px solid #ccc;
+min-height: 280px;
+padding: 30px 24px 0;
+position: relative;
+width: 558px;
+display: block;
+}
+
 /*------------------------------------popup user info------------------------------------*/
 
 .popup {
