--- a/trunk/assets/css/a.css
+++ b/trunk/assets/css/a.css
@@ -18,12 +18,6 @@
 .play:hover { background: #fcf9ef url(img/icon-play-black.png) 30px 8px no-repeat; }
 #three .bt3 { margin-top: 40px; }
 
-/*#one { position: relative; top: 0; background: url(../img/music2.jpg) 50% 0 no-repeat fixed; height: 800px; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
-#two { position: relative; top: 0; background: url(../img/fond-b.jpg) 50% 0 no-repeat fixed; height: 800px; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
-#three { position: relative; top: 0; background: url(../img/fond-c.jpg) 50% 0 no-repeat fixed; height: 800px; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }
-#four { position: relative; top: 0; background: url(../img/fond-d.jpg) 50% 0 no-repeat fixed; height: 850px; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; }	
-*/
-/*#menu { z-index: 999; position: fixed; bottom: 0; left: 0; background: #fcf9ef; height: 80px; width: 100%; overflow-x: hidden; }*/
 #menu { background: #fcf9ef; height: 80px; width: 100%; overflow-x: hidden; }
 #menu .logo { cursor: pointer; position: absolute; height: 110px; width: 310px; left: 0px; top: -20px; }
 
@@ -63,7 +57,7 @@ text-transform: uppercase;
 .social a:hover { text-decoration: none; }
 
 
-#one > div { text-align: center; position: absolute; width: 460px; margin-left: -230px; left: 50%; height: 250px; margin-top: -125px; top: 40%; }
+/*#one > div { text-align: center; position: absolute; width: 460px; margin-left: -230px; left: 50%; height: 250px; margin-top: -125px; top: 40%; }
 #two > div { text-align: center; background: #fcf9ef; position: absolute; width: 310px; margin-left: -155px; left: 50%; height: 350px; margin-top: -175px; top: 40%; }
 #three > div { text-align: center; position: absolute; width: 380px; margin-left: -190px; left: 50%; height: 300px; margin-top: -150px; top: 40%; }
 #four > div { text-align: center; background: #fcf9ef; position: absolute; width: 310px; margin-left: -155px; left: 50%; height: 350px; margin-top: -175px; top: 40%; }
@@ -78,7 +72,7 @@ text-transform: uppercase;
 #four .lien_social { letter-spacing: 3px; display: inline-block; margin-top: 35px; font-size: 9px; font-family: arial; color: #000; }
 #four .plus_margin { margin: 0 20px 0 20px; }
 
-
+*/
 #nav { position: fixed; z-index: 998; right: 70px; margin-top: -65px; top: 50%; }
 #nav ul li { cursor: pointer; display: block; background: #fcf9ef; width: 10px; height: 10px; border-radius: 10px; margin: 6px 0 6px 0; }
 #nav ul li.active { background: #1d1d1b; }
