--- a/assets/css/a.css
+++ b/assets/css/a.css
@@ -19,7 +19,13 @@
 #three .bt3 { margin-top: 40px; }
 
 #menu { background: #fcf9ef; height: 80px; width: 100%; overflow-x: hidden; }
-#menu .logo { cursor: pointer; position: absolute; height: 110px; width: 310px; left: 0px; top: -20px; }
+#menu .logo {
+	cursor: pointer;
+	position: absolute;
+	height: 80px;
+	width: 200px;
+	left: 0px;
+	top: 0px; }
 
 #la_video { z-index: 998; display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; }
 #la_video i { cursor: pointer; z-index: 999; position: fixed; right: 30px; top: 30px; display: block; width: 56px; height: 56px; background: url(img/close.png) top left no-repeat; }
